client/blocks/reader-post-card/style.scss
// Custom breakpoints needed to match original design

$reader-post-card-breakpoint-xlarge: "( min-width: 1040px )";
$reader-post-card-breakpoint-large: "( min-width: 961px ) and ( max-width: 1040px )";
$reader-post-card-breakpoint-medium: "( min-width: 661px ) and ( max-width: 940px )";
$reader-post-card-breakpoint-small: "( max-width: 550px )";

.reader-post-card.card {
	border-bottom: 1px solid lighten( $gray, 30% );
	box-shadow: none;
	margin: 10px;
	padding: 20px 10px;

	@include breakpoint( ">660px" ) {
		padding: 20px 0;
	}

	@media #{$reader-post-card-breakpoint-xlarge}  {
		padding: 20px 15px;
	}
}

.reader-post-card__byline {
	display: flex;
	font-size: 13px;
	margin: -4px 0 15px;
}

.reader-post-card__author::after {
	content: ', ';
}

// Need .reader__content to override .reader__content a
.reader__content .reader-post-card__timestamp-link,
.reader__content .reader-post-card__tag-link
{
	color: lighten( $gray, 10% );
	margin-top: 2px;
	cursor: pointer;
}

.reader-post-card__byline-details {
	color: $blue-medium;
	margin-top: -2px;
	width: 100%;
}

.reader-post-card__timestamp-and-tag {
	display: flex;
	flex-direction: row;
	align-items: flex-start;
	margin-top: 1px;
}

.reader-post-card__timestamp {
	display: inline-table;
	margin-right: 10px;
}

.reader-post-card__tag {
    overflow: hidden;
    position: relative;
    height: 20px;
    width: 100%;

    &::after {
    	@include long-content-fade( $size: 10% );
    }
}

.reader-post-card__tag .gridicons-tag {
    height: 18px;
    margin: -4px 5px 0 0;
    position: relative;
    	top: 5px;
	width: 15px;
	fill: lighten( $gray, 10% );
}

.reader-post-card .gravatar {
	float: left;
	height: 32px;
	margin: 2px 6px 0 0;
	vertical-align: text-top;
	width: 32px;
}

.reader-post-card__link,
.reader-post-card__link:visited {
	color: $blue-medium;
	cursor: pointer;
}

.reader-post-card__post {
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;

	.reader-post-card__featured-image {
		flex-basis: auto;
		flex-grow: 1;
		margin-right: 20px;
		max-width: 190px;

		@include breakpoint( ">960px" ) {
			max-width: 250px;
		}

		@media #{$reader-post-card-breakpoint-medium} {
			height: 100px;
			max-width: none;
			width: 100%;
		}

		@media #{$reader-post-card-breakpoint-small} {
			height: 100px;
			max-width: none;
			width: 100%;
		}
	}

	.reader-post-card__post-details {
		flex: 1;
	}

	@media #{$reader-post-card-breakpoint-large} {
		flex-direction: row;
	}

	@media #{$reader-post-card-breakpoint-medium} {
		flex-direction: column;
	}

	@media #{$reader-post-card-breakpoint-small} {
		flex-direction: column;
	}
}

.reader-post-card__post-details {
	font-family: $serif;
}

.reader-post-card__title {
	line-height: 1.3;
}

// Needs to overwrite .reader__content a
.reader__content .reader-post-card__title-link,
.reader__content .reader-post-card__title-link:visited,
.reader-post-card__title-link,
.reader-post-card__title-link:visited {
	color: $gray-dark;
	cursor: pointer;
	font-size: 27px;
	font-weight: 600;

	&:hover {
		color: $gray-dark;
	}
}

.reader-post-card__excerpt {
	font-size: 16px;
	font-weight: 100;
}

// Action buttons in post card
.reader-post-card.card .reader-post-actions__item {
	font-size: 14px;

	&.reader-post-actions__visit {
		padding: 2px 0 0;

		@media #{$reader-post-card-breakpoint-large} {
			padding: 0;
		}

		@media #{$reader-post-card-breakpoint-medium} {
			padding: 0;
		}

		@include breakpoint( "<660px" ) {
			padding: 0;
		}

		.gridicon {
			fill: lighten( $gray, 10% );
			position: relative;
				left: -8px;
				top: 3px;
		}
	}

	.gridicons-external {
		margin-right: -2px;
	}

	.like-button .gridicon {
		top: 5px;
	}

	.like-button__label {
		margin: -4px 0 0 -5px;
	}

	.comment-button {
		align-items: flex-start;
	}

	.comment-button .gridicon {
		top: 2px;
		margin-right: 2px;
	}

	.comment-button,
	.like-button {

		@media #{$reader-post-card-breakpoint-large} {
			top: -2px;
		}

		@media #{$reader-post-card-breakpoint-medium} {
			top: -2px;
		}

		@include breakpoint( "<660px" ) {
			top: -2px;
		}
	}

	.reader-share__button-label,
	.comment-button__label-status,
	.like-button__label-status {

		@media #{$reader-post-card-breakpoint-large} {
			display: none;
		}

		@media #{$reader-post-card-breakpoint-medium} {
			display: none;
		}

		@include breakpoint( "<660px" ) {
			display: none;
		}
	}
}

// For these borderless cards to look more presentable on Devdocs
.is-section-devdocs .reader-post-card.card {
	padding: 16px;
}

.is-section-devdocs .reader-post-card__featured-image {
	bottom: 16px;
}

